cmake_minimum_required(VERSION 3.0)
PROJECT(LamanieHasel)
include_directories(inc)
file(GLOB SOURCE "src/*.cpp" "inc/*.hh")
add_executable(${PROJECT_NAME} ${SOURCE})
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(LamanieHasel Threads::Threads)
target_link_libraries(LamanieHasel GLU)
target_link_libraries(LamanieHasel GL)
target_link_libraries(LamanieHasel pthread)
target_link_libraries(LamanieHasel crypto ssl)
target_compile_features(LamanieHasel PRIVATE cxx_std_17)
set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-Wall -Wextra -pedantic -Werror -lssl -lcrypto -std=gnu++17)
